--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@ pre code {
 </div>
 <div id="summary-paragraph" class="section level3">
 <h3>Summary Paragraph</h3>
-<p>Write a summary paragraph that includes information calculated by your summary information function</p>
+<p>The dataset we used had all sorts of data ranging from 1896 to 2016.</p>
 </div>
 <div id="table" class="section level3">
 <h3>Table</h3>
-<p>Render your table and describe pertinent observations found in it</p>
+<p>Some observations we found inside our aggregated table was…</p>
 <pre><code>## `summarise()` has grouped output by &#39;Team&#39;, &#39;NOC&#39;. You can override using the `.groups` argument.</code></pre>
 <table>
 <thead>
